fix `join lobby` layout overflowing

--- a/resources/frontend/lobby_create.css
+++ b/resources/frontend/lobby_create.css
@@ -71,6 +71,7 @@
     flex: 1 1;
     margin: 0 1rem 0 1rem;
     padding: 1rem;
+    overflow: hidden;
 }
 
 /* display: block causes the element to be visible, since the default value is none */
@@ -88,6 +89,7 @@
     display: flex;
     flex-direction: row;
     flex: 1;
+    height: 100%;
 }
 
 .table-wrapper-wrapper {
@@ -95,12 +97,13 @@
     flex-direction: column;
     flex: 3;
     margin: 1rem;
+    overflow: hidden;
 }
 
 .table-wrapper {
-    overflow: auto;
     flex: 1;
     border: 1px solid slategray;
+    overflow-y: scroll;
 }
 
 #refresh-button {
@@ -129,6 +132,7 @@
 
 table {
     border: 0;
+    border-collapse: collapse;
 }
 
 td, th {
@@ -140,6 +144,11 @@ th {
     background-color: white;
     position: sticky;
     top: 0;
+    padding: 0.2rem;
+}
+
+tr:nth-child(2n) {
+    background-color: rgb(219, 219, 219);
 }
 
 tr:hover {
